fetch games by team id
